# vdW_grid_bench

./: LICENSE  Makefile  README.md  dune-project  grid_init  test.sh  vdw_grid_bench.opam
data/: lig.pqrs  prot.pqrs
src/: Makefile  UFF.ml  V3.ml  baseline.txt  dune  grid_init.ml  mol.ml  pqrs.ml  ptable.ml
